Fix scrolling on mobile

--- a/pongi22/src/index.css
+++ b/pongi22/src/index.css
@@ -17,6 +17,7 @@
 
 #root {
   max-width: 1500px;
+  width: 100%;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
